<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.modules.auth.registration.RegistrationActivity">

    <data>
        <variable
            name="mViewModel"
            type="com.app.eho.ui.modules.auth.registration.RegistrationViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_top_height"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@color/toolbar_color">

                    <TextView
                        android:id="@+id/tv_top_bar_title"
                        style="@style/TextViewTopTileTheme"
                        android:text="@string/registration_title"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.Toolbar>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_help"
                    android:padding="@dimen/screen_form_padding">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_name"
                        style="@style/TextInputTheme"
                        android:layout_marginTop="@dimen/screen_top_margin"
                        app:startIconDrawable="@drawable/ic_baseline_person_24"
                        android:hint="@string/name_field_hint"
                        app:boxStrokeColor="@color/text_input_stroke_color"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            style="@style/TextInputEditTextTheme"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_email"
                        style="@style/TextInputTheme"
                        app:startIconDrawable="@drawable/ic_baseline_email_24"
                        android:hint="@string/email_field_hint"
                        app:boxStrokeColor="@color/text_input_stroke_color"
                        app:layout_constraintTop_toBottomOf="@id/layout_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            style="@style/TextInputEditTextTheme"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_email_confirm"
                        style="@style/TextInputTheme"
                        app:startIconDrawable="@drawable/ic_baseline_email_24"
                        android:hint="@string/email_con_field_hint"
                        app:boxStrokeColor="@color/text_input_stroke_color"
                        app:layout_constraintTop_toBottomOf="@id/layout_email"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email_confirm"
                            style="@style/TextInputEditTextTheme"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_password"
                        style="@style/TextInputTheme"
                        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                        android:hint="@string/password_field_hint"
                        app:boxStrokeColor="@color/text_input_stroke_color"
                        app:layout_constraintTop_toBottomOf="@+id/layout_email_confirm"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/TextInputEditTextTheme"
                            android:layout_marginTop="10dp"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_password_confirm"
                        style="@style/TextInputTheme"
                        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                        android:hint="@string/password_confirm_field_hint"
                        app:boxStrokeColor="@color/text_input_stroke_color"
                        app:layout_constraintTop_toBottomOf="@+id/layout_password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password_confirm"
                            style="@style/TextInputEditTextTheme"
                            android:layout_marginTop="10dp"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_phone"
                        style="@style/TextInputTheme"
                        app:startIconDrawable="@drawable/ic_baseline_phone_24"
                        android:hint="@string/phone_field_hint"
                        app:boxStrokeColor="@color/text_input_stroke_color"
                        app:layout_constraintTop_toBottomOf="@+id/layout_password_confirm"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_phone"
                            style="@style/TextInputEditTextTheme"
                            android:layout_marginTop="10dp"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_submit"
                        style="@style/MaterialButtonTheme"
                        android:text="@string/registration_button_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layout_phone" />

                    <ProgressBar
                        android:id="@+id/pb_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_help"
                    style="@style/MaterialButtonTheme"
                    android:background="@color/btn_bg_color"
                    android:visibility="gone"
                    android:text="@string/login_text_new_registration"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>