<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.modules.auth.login.LoginActivity">

    <data>
        <variable
            name="mViewModel"
            type="com.app.eho.ui.modules.auth.login.LoginViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_registration"
                    android:padding="@dimen/screen_form_padding">

                    <ImageView
                        android:id="@+id/iv_logo"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="30dp"
                        android:gravity="center_horizontal"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_email"
                        style="@style/TextInputTheme"
                        app:startIconDrawable="@drawable/ic_baseline_email_24"
                        android:hint="@string/email_field_hint"
                        app:boxStrokeColor="@color/text_input_stroke_color"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_logo">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            style="@style/TextInputEditTextTheme"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_password"
                        style="@style/TextInputTheme"
                        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                        android:hint="@string/password_field_hint"
                        app:boxStrokeColor="@color/text_input_stroke_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layout_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/TextInputEditTextTheme"
                            android:layout_marginTop="10dp"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_submit"
                        style="@style/MaterialButtonTheme"
                        android:text="@string/login_button_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layout_password" />

                    <ProgressBar
                        android:id="@+id/pb_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_forgot_pwd"
                        style="@style/TextViewLinkTheme"
                        android:text="@string/login_text_forget_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_submit" />

                    <TextView
                        android:id="@+id/tv_navigate"
                        style="@style/TextViewLinkTheme"
                        android:text="@string/login_button_with_navigate_drawer"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pwd" />

                    <TextView
                        android:id="@+id/tv_gmail"
                        style="@style/TextViewLinkTheme"
                        android:text="@string/login_button_with_gmail"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_navigate" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_gmail"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_gmail"
                        style="@style/sign_in_social_iv"
                        android:layout_marginStart="0dp"
                        android:padding="9dp"
                        android:src="@mipmap/btn_google"
                        android:layout_marginTop="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_gmail"
                        android:contentDescription=""/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_registration"
                    style="@style/MaterialButtonTheme"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/login_text_new_registration"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>